projects/rhodes.akn/dist/infrastructure/kubernetes/ingress-gateway/gateway.networking.k8s.io.v1.Gateway.default.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    argocd.argoproj.io/description: |
      Cilium Gateway API gateway for rhodes.akn cluster.
      Handles all HTTP/HTTPS ingress traffic with TLS termination.
  name: default
  namespace: ingress-gateway-system
spec:
  gatewayClassName: cilium
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: web
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: All
    hostname: '*.chezmoi.sh'
    name: chezmoi.sh-websecure
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: wildcard.chezmoi.sh-certificate
      mode: Terminate
  - allowedRoutes:
      namespaces:
        from: All
    hostname: '*.akn.chezmoi.sh'
    name: akn.chezmoi.sh-websecure
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: wildcard.chezmoi.sh-certificate
      mode: Terminate
