projects/rhodes.akn/dist/infrastructure/kubernetes/ingress-gateway/gateway.networking.k8s.io.v1.HTTPRoute.redirect-http-to-https-external.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-http-to-https-external
  namespace: ingress-gateway-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external
    sectionName: web
  rules:
  - filters:
    - requestRedirect:
        scheme: https
        statusCode: 301
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /
