projects/rhodes.akn/dist/infrastructure/kubernetes/ingress-gateway/cilium.io.v2.CiliumNetworkPolicy.default-hardened.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Default hardened network policy for the ingress-gateway-system namespace that implements a
      secure baseline by denying all traffic except explicitly allowed connections. Permits
      intra-namespace communication and DNS resolution to kube-system, while blocking all other
      traffic by default.
  name: default-hardened
  namespace: ingress-gateway-system
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchPattern: '*'
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: ingress-gateway-system
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: ingress-gateway-system
